[package]
name = "catena"
version = "0.1.0"
description = "Toy blockchain for didactic purposes"
repository = "https://github.com/xandkar/catena"
authors = ["Siraaj Khandkar <siraaj@khandkar.net>"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
